trying to fix cover buttons spacing

--- a/css/cover.css
+++ b/css/cover.css
@@ -116,7 +116,6 @@ body {
 
 .buy-buttons {
   margin: 1em auto;
-  outline: 1px solid red;
   text-align: center;
 }
 
